<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">

	<!--<item-->
		<!--android:id="@+id/mm_qr_read"-->
		<!--android:icon="@drawable/ic_menu_camera"-->
		<!--android:title="@string/menu_qr_read"/>-->

	<item
		android:id="@+id/mm_call_main"
		android:icon="@drawable/ic_menu_slideshow"
		android:title="@string/menu_call_main"/>


	<item
		android:id="@+id/mm_stand_alone"
		android:icon="@drawable/ic_menu_gallery"
		android:title="@string/menu_stand_alone"/>
	<!--</group>-->



	<item
		android:id="@+id/mm_prefarence"
		android:icon="@drawable/ic_menu_manage"
		android:title="@string/menu_setting"/>
	<item
		android:id="@+id/mm_quit"
		android:icon="@android:drawable/ic_lock_power_off"
		android:title="@string/menu_quit"/>

</menu>
