<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/side_nav_bar"
	android:gravity="bottom"
	android:orientation="horizontal"
	android:padding="8dp"
	android:theme="@style/ThemeOverlay.AppCompat.Dark">

	<ImageView
		android:id="@+id/navi_head_iv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/nav_header_desc"
		app:srcCompat="@mipmap/ic_launcher_round"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingLeft="8dp">

		<TextView
			android:id="@+id/nave_head_main_tv"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="@dimen/nav_header_vertical_spacing"
			android:text="@string/app_name"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

		<TextView
			android:id="@+id/navi_head_sub_tv"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/nav_header_subtitle"/>
	</LinearLayout>

</LinearLayout>
