<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
				  xmlns:tools="http://schemas.android.com/tools">
	<PreferenceScreen
		android:key="conection_setting_key"
		android:summary="@string/rootUrlStr"
		android:title="@string/conection_setting">

		<EditTextPreference
			android:defaultValue="http://192.168.3.14:3080"
			android:key="rootUrl_key"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:summary="@string/rootUrlStr"
			android:title="@string/rootUrl"/>

		<ListPreference
			android:defaultValue="@string/rootUrlStr"
			android:entries="@array/url_array"
			android:entryValues="@array/url_array"
			android:key="testUrlt_key"
			android:summary="%s"
			android:title="@string/testUrl"/>
		<!--android:summary="@string/video_output_format_mpeg_4"-->

	</PreferenceScreen>

	<!--<PreferenceScreen-->
		<!--android:key="video_key"-->
		<!--android:title="@string/mm_video">-->
		<!--<ListPreference-->
			<!--android:defaultValue="@string/video_output_format_mpeg_4"-->
			<!--android:entries="@array/video_output_array"-->
			<!--android:entryValues="@array/video_output_array"-->
			<!--android:key="video_output_format_key"-->
			<!--android:summary="%s"-->
			<!--android:title="@string/video_output_format"/>-->
		<!--&lt;!&ndash;android:summary="@string/video_output_format_mpeg_4"&ndash;&gt;-->

		<!--<ListPreference-->
			<!--android:defaultValue="10000000"-->
			<!--android:entries="@array/video_bit_rate_array"-->
			<!--android:entryValues="@array/video_bit_rate_array"-->
			<!--android:key="video_rencoding_bit_rate_key"-->
			<!--android:summary="%s"-->
			<!--android:title="@string/mm_video_rencoding_bit_rate"/>-->
		<!--&lt;!&ndash;android:summary="10000000"&ndash;&gt;-->

		<!--<ListPreference-->
			<!--android:defaultValue="30"-->
			<!--android:entries="@array/video_frame_rate_array"-->
			<!--android:entryValues="@array/video_frame_rate_array"-->
			<!--android:key="video_rencoding_frame_rate_key"-->
			<!--android:summary="%s"-->
			<!--android:title="@string/mm_video_frame_rate"/>-->
		<!--&lt;!&ndash;android:summary="30"   では更新されな&ndash;&gt;-->

		<!--<ListPreference-->
			<!--android:defaultValue="@string/audio_source_mic"-->
			<!--android:entries="@array/video_audio_source_array"-->
			<!--android:entryValues="@array/video_audio_source_array"-->
			<!--android:key="video_audio_source_key"-->
			<!--android:summary="%s"-->
			<!--android:title="@string/audio_source"/>-->
		<!--&lt;!&ndash;android:summary="@string/audio_source_mic"&ndash;&gt;-->

		<!--<ListPreference-->
			<!--android:defaultValue="@string/video_source_surface"-->
			<!--android:entries="@array/video_data_source_array"-->
			<!--android:entryValues="@array/video_data_source_array"-->
			<!--android:key="video_data_source_key"-->
			<!--android:summary="%s"-->
			<!--android:title="@string/video_source"/>-->
		<!--&lt;!&ndash;android:summary="@string/video_source_surface"&ndash;&gt;-->

		<!--<ListPreference-->
			<!--android:defaultValue="@string/video_videdo_encorde_h264"-->
			<!--android:entries="@array/video_encorde_array"-->
			<!--android:entryValues="@array/video_encorde_array"-->
			<!--android:key="video_encorde_key"-->
			<!--android:summary="%s"-->
			<!--android:title="@string/video_videdo_encorde"/>-->
		<!--&lt;!&ndash;android:summary="@string/video_videdo_encorde_h264"&ndash;&gt;-->

		<!--<ListPreference-->
			<!--android:defaultValue="@string/video_audio_encorde_aac"-->
			<!--android:entries="@array/video_audio_encorde_array"-->
			<!--android:entryValues="@array/video_audio_encorde_array"-->
			<!--android:key="video_audio_encorde_key"-->
			<!--android:summary="%s"-->
			<!--android:title="@string/video_audio_encorde"/>-->
		<!--&lt;!&ndash;android:summary="@string/video_audio_encorde_aac"&ndash;&gt;-->

	<!--</PreferenceScreen>-->

	<!--<PreferenceScreen-->
		<!--android:key="effect_key"-->
		<!--android:title="@string/mm_effect">-->
		<!--<CheckBoxPreference-->
			<!--android:defaultValue="false"-->
			<!--android:key="is_face_recognition_key"-->
			<!--android:title="@string/mm_effect_face_recgnition"/>-->
		<!--<CheckBoxPreference-->
			<!--android:defaultValue="false"-->
			<!--android:key="is_overlap_rejection_key"-->
			<!--android:title="@string/mm_effect_overlap_rejection"/>-->


		<!--<PreferenceScreen-->
			<!--android:enabled="true"-->
			<!--android:key="detector_select_key"-->
			<!--android:selectable="true"-->
			<!--android:title="@string/mm_detector_select">-->
			<!--<PreferenceCategory-->
				<!--android:title="@string/mm_detector_root">-->

				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_frontal_face_alt_key"-->
					<!--android:title="@string/mm_detector_frontal_face_alt"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_profileface_key"-->
					<!--android:title="@string/mm_detector_profileface"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_upperbody_key"-->
					<!--android:title="@string/mm_detector_upperbody"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_fullbody_key"-->
					<!--android:title="@string/mm_detector_fullbody"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_lowerbody_key"-->
					<!--android:title="@string/mm_detector_lowerbody"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_frontalcatface_key"-->
					<!--android:title="@string/mm_detector_frontalcatface"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_frontalcatface_extended_key"-->
					<!--android:title="@string/mm_detector_frontalcatface_extended"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_frontalface_alt2_key"-->
					<!--android:title="@string/mm_detector_frontalface_alt2"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_frontalface_default_key"-->
					<!--android:title="@string/mm_detector_frontalface_default"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_smile_key"-->
					<!--android:title="@string/mm_detector_smile"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_russian_plate_number_key"-->
					<!--android:title="@string/mm_detector_russian_plate_number"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_ricence_plate_rus_16stages_key"-->
					<!--android:title="@string/mm_detector_ricence_plate_rus_16stages"/>-->
			<!--</PreferenceCategory>-->
			<!--&lt;!&ndash;//下半身&ndash;&gt;-->
			<!--<PreferenceCategory-->
				<!--android:title="@string/mm_detector_detaile">-->

				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_eye_key"-->
					<!--android:title="@string/mm_detector_eye"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_righteye_2splits_key"-->
					<!--android:title="@string/mm_detector_righteye_2splits"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_lefteye_2splitss_key"-->
					<!--android:title="@string/mm_detector_lefteye_2splits"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_eyeglasses_key"-->
					<!--android:title="@string/mm_detector_eyeglasses"/>-->
				<!--<CheckBoxPreference-->
					<!--android:defaultValue="false"-->
					<!--android:key="is_detector_frontalface_alt_tree_key"-->
					<!--android:title="@string/mm_detector_frontalface_alt_tree"/>-->
			<!--</PreferenceCategory>-->
		<!--</PreferenceScreen>-->

		<!--<CheckBoxPreference-->
			<!--android:defaultValue="false"-->
			<!--android:key="is_chase_focus_key"-->
			<!--android:title="@string/mm_effect_chase_focus"/>-->
	<!--</PreferenceScreen>-->

	<!--<PreferenceScreen-->
		<!--android:key="other_key"-->
		<!--android:title="@string/mm_ohter">-->
		<!--<EditTextPreference-->
			<!--android:defaultValue="12345native"-->
			<!--android:inputType="text"-->
			<!--android:key="write_folder_key"-->
			<!--android:summary="9999999999"-->
			<!--android:title="@string/write_folder"/>-->

		<!--<Preference-->
			<!--android:defaultValue="0"-->
			<!--android:key="haarcascades_last_modified_key"-->
			<!--android:selectable="false"-->
			<!--android:summary="0"-->
			<!--android:title="@string/haarcascades_last_modified"/>-->
	<!--</PreferenceScreen>-->

	<!--<SwitchPreference-->
	<!--android:defaultValue="false"-->
	<!--android:inputType="none"-->
	<!--android:key="accountName_cbp"-->


</PreferenceScreen>